src/parser/gASPParser.java
package parser;// Generated from /Users/vmastand/GitHub/DeadlockTool/src/gASP.g4 by ANTLR 4.5.1

import models.*;
import java.util.HashMap;
import java.util.LinkedList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gASPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ASSIGN=2, CLASS=3, COLON=4, COMMA=5, DISTINCT=6, DIV=7, DOT=8, 
		ELSE=9, EQUALS=10, GEG=11, GT=12, IF=13, INT=14, LCBRACK=15, LEG=16, LPAR=17, 
		LSBRACK=18, LT=19, MINUS=20, MOD=21, MULT=22, NEW=23, NULL=24, OR=25, 
		PLUS=26, RCBRACK=27, RETURN=28, RPAR=29, RSBRACK=30, SEMI=31, SKIP=32, 
		THIS=33, IDUC=34, IDLC=35, NUMBER=36, WS=37, LINECOMENTS=38, BLOCKCOMENTS=39;
	public static final int
		RULE_program = 0, RULE_classSignature = 1, RULE_classDec = 2, RULE_methodSignature = 3, 
		RULE_methodDef = 4, RULE_body = 5, RULE_varDeclaration = 6, RULE_varDec = 7, 
		RULE_objDec = 8, RULE_intDec = 9, RULE_parDef = 10, RULE_typeVariable = 11, 
		RULE_secondPair = 12, RULE_type = 13, RULE_intType = 14, RULE_objType = 15, 
		RULE_variable = 16, RULE_stmt = 17, RULE_skipStmt = 18, RULE_assignStmt = 19, 
		RULE_ifStmt = 20, RULE_elseStmt = 21, RULE_returnStmt = 22, RULE_stmtblock = 23, 
		RULE_expressionSideEffect = 24, RULE_methodCall = 25, RULE_expression = 26, 
		RULE_newExp = 27, RULE_arithmeticExpression = 28, RULE_valAritExp = 29, 
		RULE_variableExp = 30, RULE_parAritExp = 31, RULE_booleanExpression = 32, 
		RULE_value = 33, RULE_element = 34;
	public static final String[] ruleNames = {
		"program", "classSignature", "classDec", "methodSignature", "methodDef", 
		"body", "varDeclaration", "varDec", "objDec", "intDec", "parDef", "typeVariable", 
		"secondPair", "type", "intType", "objType", "variable", "stmt", "skipStmt", 
		"assignStmt", "ifStmt", "elseStmt", "returnStmt", "stmtblock", "expressionSideEffect", 
		"methodCall", "expression", "newExp", "arithmeticExpression", "valAritExp", 
		"variableExp", "parAritExp", "booleanExpression", "value", "element"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'&&'", "'='", "'class'", "':'", "','", "'!='", "'/'", "'.'", "'else'", 
		"'=='", "'>='", "'>'", "'if'", "'Int'", "'{'", "'<='", "'('", "'['", "'<'", 
		"'-'", "'module'", "'*'", "'new'", "'null'", "'||'", "'+'", "'}'", "'return'", 
		"')'", "']'", "';'", "'skip'", "'this'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "AND", "ASSIGN", "CLASS", "COLON", "COMMA", "DISTINCT", "DIV", "DOT", 
		"ELSE", "EQUALS", "GEG", "GT", "IF", "INT", "LCBRACK", "LEG", "LPAR", 
		"LSBRACK", "LT", "MINUS", "MOD", "MULT", "NEW", "NULL", "OR", "PLUS", 
		"RCBRACK", "RETURN", "RPAR", "RSBRACK", "SEMI", "SKIP", "THIS", "IDUC", 
		"IDLC", "NUMBER", "WS", "LINECOMENTS", "BLOCKCOMENTS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gASP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		public HashMap<String, ClassDecl> classTable;
		public ClassDecl currentClass;
		public Method currentMethod;
		public Environment environment;

	public gASPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program prog;
		public ClassDecContext classDec;
		public BodyContext main;
		public TerminalNode MOD() { return getToken(gASPParser.MOD, 0); }
		public TerminalNode IDUC() { return getToken(gASPParser.IDUC, 0); }
		public TerminalNode SEMI() { return getToken(gASPParser.SEMI, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public List<ClassDecContext> classDec() {
			return getRuleContexts(ClassDecContext.class);
		}
		public ClassDecContext classDec(int i) {
			return getRuleContext(ClassDecContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gASPVisitor ) return ((gASPVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		HashMap<String, ClassDecl> classMap = new HashMap<>();
							  classTable = classMap;
						
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(MOD);
			setState(71);
			match(IDUC);
			setState(72);
			match(SEMI);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(73);
				((ProgramContext)_localctx).classDec = classDec();
				classMap.put(((ProgramContext)_localctx).classDec.classObj.getClassName(),((ProgramContext)_localctx).classDec.classObj);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			((ProgramContext)_localctx).main = body();
			((ProgramContext)_localctx).prog =  new Program(classMap, ((ProgramContext)_localctx).main.stb);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassSignatureContext extends ParserRuleContext {
		public ClassDecl classObj;
		public Token className;
		public ParDefContext parameters;
		public TerminalNode CLASS() { return getToken(gASPParser.CLASS, 0); }
		public TerminalNode LPAR() { return getToken(gASPParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(gASPParser.RPAR, 0); }
		public TerminalNode IDUC() { return getToken(gASPParser.IDUC, 0); }
		public ParDefContext parDef() {
			return getRuleContext(ParDefContext.class,0);
		}
		public ClassSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).enterClassSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).exitClassSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gASPVisitor ) return ((gASPVisitor<? extends T>)visitor).visitClassSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassSignatureContext classSignature() throws RecognitionException {
		ClassSignatureContext _localctx = new ClassSignatureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classSignature);
		HashMap<String, LinkedList<Method>> methods = new HashMap<>();
							  ((ClassSignatureContext)_localctx).classObj =  new ClassDecl();
							  currentClass = _localctx.classObj;
							  
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(CLASS);
			setState(85);
			((ClassSignatureContext)_localctx).className = match(IDUC);
			_localctx.classObj.setClassName((((ClassSignatureContext)_localctx).className!=null?((ClassSignatureContext)_localctx).className.getText():null));
			setState(87);
			match(LPAR);
			{
			setState(88);
			((ClassSignatureContext)_localctx).parameters = parDef();
			}
			_localctx.classObj.setParameters(((ClassSignatureContext)_localctx).parameters.pars);
			setState(90);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDecContext extends ParserRuleContext {
		public ClassDecl classObj;
		public ClassSignatureContext cs;
		public VarDeclarationContext fields;
		public MethodDefContext m;
		public TerminalNode LCBRACK() { return getToken(gASPParser.LCBRACK, 0); }
		public TerminalNode RCBRACK() { return getToken(gASPParser.RCBRACK, 0); }
		public ClassSignatureContext classSignature() {
			return getRuleContext(ClassSignatureContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public List<MethodDefContext> methodDef() {
			return getRuleContexts(MethodDefContext.class);
		}
		public MethodDefContext methodDef(int i) {
			return getRuleContext(MethodDefContext.class,i);
		}
		public ClassDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).enterClassDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).exitClassDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gASPVisitor ) return ((gASPVisitor<? extends T>)visitor).visitClassDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDecContext classDec() throws RecognitionException {
		ClassDecContext _localctx = new ClassDecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDec);
		HashMap<String, LinkedList<Method>> methods = new HashMap<>();
							  LinkedList<Method> methodList = null;
							  ((ClassDecContext)_localctx).classObj =  new ClassDecl();
							  currentClass = _localctx.classObj;
							  
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((ClassDecContext)_localctx).cs = classSignature();
			((ClassDecContext)_localctx).classObj =  ((ClassDecContext)_localctx).cs.classObj;
			setState(94);
			match(LCBRACK);
			setState(95);
			((ClassDecContext)_localctx).fields = varDeclaration();
			_localctx.classObj.setFields(((ClassDecContext)_localctx).fields.vars);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==IDUC) {
				{
				{
				setState(97);
				((ClassDecContext)_localctx).m = methodDef();
				if (methods.containsKey(((ClassDecContext)_localctx).m.method.getMethodName()))
								    	                	   { LinkedList<Method> list = methods.get(((ClassDecContext)_localctx).m.method.getMethodName());
								    	                         if (((ClassDecContext)_localctx).m.method.isIn(list))
								    	                         { System.out.println("The method "+ ((ClassDecContext)_localctx).m.method.getMethodName() +
								    	                                              " has been defined more than once! Rename it");
								    	                           System.exit(0); }
								    	                         else
								    	                         { ((ClassDecContext)_localctx).m.method.setID(methods.get(((ClassDecContext)_localctx).m.method.getMethodName()).size());
																   methods.get(((ClassDecContext)_localctx).m.method.getMethodName()).add(((ClassDecContext)_localctx).m.method);
															     }
				 					    					   }
									    					   else
									    					   {  methodList = new LinkedList<>();
									    						  ((ClassDecContext)_localctx).m.method.setID(0);
									    						  methodList.add(((ClassDecContext)_localctx).m.method);
									    	                      methods.put(((ClassDecContext)_localctx).m.method.getMethodName(),methodList);
									    	                   }
								    	    
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(RCBRACK);
			 _localctx.classObj.setMethods(methods);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodSignatureContext extends ParserRuleContext {
		public Method methodSign;
		public TypeContext returnedType;
		public Token methodName;
		public ParDefContext p;
		public TerminalNode LPAR() { return getToken(gASPParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(gASPParser.RPAR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDLC() { return getToken(gASPParser.IDLC, 0); }
		public ParDefContext parDef() {
			return getRuleContext(ParDefContext.class,0);
		}
		public MethodSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).enterMethodSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).exitMethodSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gASPVisitor ) return ((gASPVisitor<? extends T>)visitor).visitMethodSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodSignatureContext methodSignature() throws RecognitionException {
		MethodSignatureContext _localctx = new MethodSignatureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_methodSignature);
		environment = new Environment();
						  	    environment.putAllInt(currentClass.getParameters());
						  	    environment.putAll(currentClass.getFields());
						  		((MethodSignatureContext)_localctx).methodSign =  new Method();
						  	    currentMethod = _localctx.methodSign;
						  	    LinkedList<Declaration> parameters = new LinkedList<>();
							    HashMap<String,Declaration> varDec = new HashMap<>();
								LinkedList<Statement> stmts = new LinkedList<>(); 
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			((MethodSignatureContext)_localctx).returnedType = type();
			_localctx.methodSign.setReturnedType(((MethodSignatureContext)_localctx).returnedType.varType);
			setState(110);
			((MethodSignatureContext)_localctx).methodName = match(IDLC);
			_localctx.methodSign.setMethodName((((MethodSignatureContext)_localctx).methodName!=null?((MethodSignatureContext)_localctx).methodName.getText():null));
			setState(112);
			match(LPAR);
			{
			setState(113);
			((MethodSignatureContext)_localctx).p = parDef();
			}
			_localctx.methodSign.setParameters(((MethodSignatureContext)_localctx).p.pars); environment.putAllInt(((MethodSignatureContext)_localctx).p.pars);
			setState(115);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDefContext extends ParserRuleContext {
		public Method method;
		public MethodSignatureContext ms;
		public BodyContext b;
		public MethodSignatureContext methodSignature() {
			return getRuleContext(MethodSignatureContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public MethodDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).enterMethodDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).exitMethodDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gASPVisitor ) return ((gASPVisitor<? extends T>)visitor).visitMethodDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDefContext methodDef() throws RecognitionException {
		MethodDefContext _localctx = new MethodDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((MethodDefContext)_localctx).ms = methodSignature();
			((MethodDefContext)_localctx).method =  ((MethodDefContext)_localctx).ms.methodSign;
			setState(119);
			((MethodDefContext)_localctx).b = body();
			_localctx.method.setBody(((MethodDefContext)_localctx).b.stb); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public StmtBlock stb;
		public VarDeclarationContext v;
		public StmtContext st;
		public TerminalNode LCBRACK() { return getToken(gASPParser.LCBRACK, 0); }
		public TerminalNode RCBRACK() { return getToken(gASPParser.RCBRACK, 0); }
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gASPListener ) ((gASPListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gASPVisitor ) return ((gASPVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		LinkedList<Statement> stmts = new LinkedList<>();
						  	HashMap<String,Declaration> vars = null;
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(LCBRACK);
			{
			setState(123);
			((BodyContext)_localctx).v = varDeclaration();
			vars=((BodyContext)_localctx).v.vars; environment.putAll(vars);
			}
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << RETURN) | (1L << SKIP) | (1L << IDLC))) != 0)) {
				{
				{
				setState(126);
				((BodyContext)_localctx).st = stmt();
				stmts.add(((BodyContext)_localctx).st.s);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(RCBRACK);
			((BodyContext)_localctx).stb =  new StmtBlock(vars,stmts);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
